# StarRailAssistant

./: .gitignore  AutoPlot.py  CONTRIBUTING.md  ChangeLog2.0.md  Configure.py  HELP.md  Kernal_code_Usage.MD  LookaheadFeature.md  README.md  SRA-cli.bat  SRA-cli.c  SRA.py  SRACloud.py  SRAOperator.py  SRAUpdater.exe.REMOVED.git-id  SRAUpdater.py  SRAbeta_v_0_6.exe.REMOVED.git-id  SRAbeta_v_0_6.py  SRAssistant.py  StarRailAssistant.py  WindowsPower.py  WindowsProcess.py  built.py  config.json  encryption.py  main.py  package.json  package.py  pyproject.toml  requirements-dev.txt  requirements-linux.txt  requirements-win.txt  requirements.txt  test_currency_wars_placement_logic.py  test_currency_wars_sell_logic.py  test_currency_wars_shopping_logic.py  toexe.py  version.json  version_info.txt
SRACore/: SRA.py  __init__.py  __main__.py  cli.py  cli2.py  config.toml  websocket_server.py
SRAFrontend/: App.axaml  App.axaml.cs  Program.cs  README.md  SRAFrontend.csproj  SRAFrontend.csproj.lscache  SRAFrontend.sln  ViewLocator.cs  app.manifest
StarRailAssistant/: Exceptions.py  __init__.py  requirements.txt
data/: config.json  版本信息.txt
rapidocr_onnxruntime/: config.yaml
res/: info.txt
res/ui/: main.ui  (+14 more)
scripts/: clean.py  cosmic_strife_flow_dry_run.py  model_gen.py  package.py  update_version.py
setup/: ChineseSimplified.isl  srasetup.iss  version_modifier.py
tasks/: CosmicStrifeTask.py  MissionAccomplishTask.py  ReceiveRewardTask.py  ReceiveRewardsTask.py  SimulateUniverseTask.py  StartGameTask.py  TrailblazePowerTask.py  WarpForecastTask.py  __init__.py  img.py
(+565 files in other folders)
